src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To edit, go to Account</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Exec Management</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Safety Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_Breakers_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Breakers Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Loyalty_Program__c</fullName>
        <label>Loyalty Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_to_be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs to be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Longer_w_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this contact is no longer with this account</inlineHelpText>
        <label>No Longer w/Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Insights__c</fullName>
        <label>Notes &amp; Insights</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Past_Purchaser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Purchaser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Children__c</fullName>
        <inlineHelpText>Enter names and any notes on the contact&apos;s family</inlineHelpText>
        <label>Spouse / Children</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <inlineHelpText>Free form text to tag contacts for specific events, lists, etc.</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Consumer_Contact</value>
        </filters>
        <label>Consumer Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_of_Customer_Engagement</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_End_User_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>End User Account</value>
        </filters>
        <label>My End User Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Industrial_Distributor_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Industrial Distributor</value>
        </filters>
        <label>My Industrial Distributor Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Retailer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Retailer Account</value>
        </filters>
        <label>My Retailer Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Customer_Engagement</role>
            <roleAndSubordinates>Manager_Operations</roleAndSubordinates>
            <roleAndSubordinates>Manager_Training_and_Quality</roleAndSubordinates>
            <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Service_Delivery_Manager_Retail</roleAndSubordinates>
            <roleAndSubordinates>Sr_Manager_Account_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_This_Week_Consumer</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Consumer_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Service_Delivery_Manager_Consumer</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Consumer_Contact</fullName>
        <active>true</active>
        <label>Consumer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Contact</fullName>
        <active>true</active>
        <label>Retail Contact</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_can_not_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>Account.Name = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account Name field can not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consumer_Contact_Must_Have_Consumer_Acct</fullName>
        <active>true</active>
        <description>Prevents association of consumer contacts with retail accounts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Consumer Contact&quot;, 
OR (
Account.RecordType.Name = &quot;End User Account&quot;,
Account.RecordType.Name = &quot;Industrial Distributor&quot;,
Account.RecordType.Name = &quot;Retailer Account&quot;))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Consumer Contacts must be associated with Consumer Accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_use_State_Codes</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR(MailingCountry = &quot;US&quot;, MailingCountry =&quot;USA&quot;, ISBLANK(MailingCountry )),
OR( 
LEN(MailingState) &lt; 2,
NOT(
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;, MailingState )
)))</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>You must use the 2 digit abbreviation state code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_use_state_code_for_Canadian_records</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
   OR(MailingCountry = &quot;CA&quot;, MailingCountry =&quot;CAN&quot;),
   OR(
   LEN(MailingState) &lt; 2,
   NOT(
      CONTAINS(&quot;AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT&quot;, MailingState)
)))</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>You must use the 2 digit state abbreviation code for Canadian records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_First_Name</fullName>
        <active>true</active>
        <description>Require a first name for consumer contacts.</description>
        <errorConditionFormula>AND ( 
$RecordType.Name = &quot;Consumer Contact&quot;, 
OR ( 
ISBLANK(FirstName) || ISBLANK(LastName)))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You must enter a first name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Contact_Must_Have_Retail_Acct</fullName>
        <active>true</active>
        <description>Prevents association of retail contacts with consumer accounts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Retail Contact&quot;, 
Account.RecordType.Name = &quot;Consumer Account&quot;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Retail Contacts must be associated with Retail Accounts.</errorMessage>
    </validationRules>
</CustomObject>